# df-analyze

./: .gitignore  README.md  calibration.py  clean_logfiles.py  conftest.py  container_requirements_2024-Sept-28.txt  df-analyze.py  df-embed.py  embed_df_test.sh  embed_df_test_cc.sh  embed_nlps.sh  embed_vision.sh  gen_student_scripts.py  generate_jobscript.py  generate_jobscripts.py  hardcoded_demo.py  lgbm_embed_runtimes.txt  live_demo.sh  local_install.sh  local_install_no_embedding.sh  local_requirements_macos.txt  local_requirements_no_embedding.txt  main.py  niagara_install.sh  niagara_requirements.txt  nlp_embed_runtimes_niagara.parquet  publish.sh  pyproject.toml  requirements.txt  ruff_imports.toml  run.py  run_cmc_data_cc.sh  run_cmc_data_fs_only.sh  run_pytest_with_home.sh  run_python_with_home.sh  run_slow.py  run_traffic_data.sh  runtime_classes.py  siku_requirements.txt  test_classify.sh  (+7 more)
.github/ISSUE_TEMPLATE/: bug_report.md
containers/: README.md  build_container.sh  build_container_cc.sh  build_container_cc_alt.sh  build_debian.def  build_sandbox.sh  check_install.sh  convert_container_to_sandbox.sh  convert_sandbox_to_container.sh  extract_overlay_data.sh  setup_overlay.sh
containers/helper_scripts/: extract_data.sh  prepare_code.sh  prepare_data.sh  prepare_weights.sh  untar_to_container.sh  update_overlay.sh
data/: mcic_forward-select100__dtree.json  mcic_forward-select100__mlp.json  mcic_forward-select100__rf.json  mcic_forward-select10__bag.json  mcic_forward-select10__svm.json  mcic_forward-select50__bag.json  mcic_forward-select50__svm.json  mcic_uncorrelated_cols.json  openml_download.py  small_classifier_data.json  spreadsheet.xlsx  spreadsheet2.csv  spreadsheet_complex.xlsx  spreadsheet_complex2.xlsx
data/banking/: to_json.py
data/mcic/: MCICFreeSurfer.mat  MCICFreeSurfer.rar  mcic_forward-select100__bag.json  mcic_forward-select100__svm.json  mcic_forward-select10__dtree.json  mcic_forward-select10__mlp.json  mcic_forward-select10__rf.json  mcic_forward-select50__dtree.json  mcic_forward-select50__mlp.json  mcic_forward-select50__rf.json
data/sklearn_classify/: make_data.py
data/sklearn_regression/: make_data.py
data/snp/: make_df.py  simulate_snp.py
data/templates/: all_args.txt  binary_classification.csv  default_args_full.txt  minimum_args.txt  spread_full_args.txt
docs/: arguments.md  program_outputs.md  students.md  windows_install.md
job_scripts/: submit_bag.sh  submit_bag_step-up.sh  submit_dtree.sh  submit_dtree_step-up.sh  submit_embed_df_test.sh  submit_mlp.sh  submit_mlp_step-up.sh  submit_mlp_step-up_100.sh  submit_rf.sh  submit_rf_step-up.sh  submit_rf_step-up_100.sh  submit_run_cmc_data_cc.sh  submit_svm.sh  submit_svm_step-up.sh  submit_test_knn_segfault.sh  submit_test_main.sh
legacy/job_scripts/: submit_bag.sh  submit_bag_step-up.sh  submit_dtree.sh  submit_mlp.sh  submit_rf.sh  submit_rf_step-up.sh  submit_svm.sh  submit_svm_step-up.sh
legacy/src/: classifiers.py  cleaning.py  objectives.py
results/: results__bag__Sun_May_2_00-15-50_2021.csv  results__bag__Sun_May_2_00-15-50_2021.json  results__bag__Thu_Jul_8_13-43-36_2021.csv  results__bag__Thu_Jul_8_13-43-36_2021.json  results__bag__Wed_May_5_00-27-36_2021.json  results__bag_step-up__Thu_Jul_8_13-40-59_2021.csv  results__bag_step-up__Thu_Jul_8_13-40-59_2021.json  results__dtree__Thu_Jul_8_13-40-03_2021.csv  results__dtree__Thu_Jul_8_13-40-03_2021.json  results__dtree__Wed_May_5_00-25-44_2021.csv  results__dtree_step-up__Thu_Jul_8_13-38-24_2021.csv  results__dtree_step-up__Thu_Jul_8_13-38-24_2021.json  results__dtree_step-up__Tue_May_4_22-54-28_2021.csv  results__dtree_step-up__Tue_May_4_22-54-28_2021.json  results__mlp__Thu_Jul_8_14-36-36_2021.csv  results__mlp__Thu_Jul_8_14-36-36_2021.json  results__mlp_step-up__Thu_Jul_8_14-17-36_2021.csv  results__mlp_step-up__Thu_Jul_8_14-17-36_2021.json  results__mlp_step-up__Wed_May_5_06-24-23_2021.json  results__mlp_step-up__Wed_May_5_13-37-25_2021.csv  results__mlp_step-up__Wed_May_5_13-37-25_2021.json  results__rf__Thu_Jul_8_14-09-56_2021.csv  results__rf__Thu_Jul_8_14-09-56_2021.json  results__rf_step-up__Thu_Jul_8_13-50-59_2021.csv  results__rf_step-up__Thu_Jul_8_13-50-59_2021.json  results__rf_step-up__Wed_May_5_11-03-13_2021.csv  results__rf_step-up__Wed_May_5_11-03-13_2021.json  results__svm__Sat_May_1_23-56-56_2021.csv  results__svm__Sun_May_2_00-11-58_2021.json  results__svm__Thu_Jul_8_13-46-12_2021.csv  results__svm__Thu_Jul_8_13-46-12_2021.json  results__svm__Wed_May_5_00-25-46_2021.csv  results__svm_step-up__Thu_Jul_8_13-44-49_2021.csv  results__svm_step-up__Thu_Jul_8_13-44-49_2021.json  results__svm_step-up__Wed_May_5_00-30-24_2021.json
results/final/: bag__Wed_May_5.csv  bag__Wed_May_5.json  dtree__Tue_May_4.csv  dtree__Tue_May_4.json  mlp__Wed_May_5.csv  mlp__Wed_May_5.json  rf__Wed_May_5.csv  rf__Wed_May_5.json  svm__Wed_May_5.csv  svm__Wed_May_5.json
runtimes/: predict_runtimes.py
src/: _constants.py  _globals.py  _sequential.py  _setup.py  _types.py  analyses.py  analysis.py  classifiers.py  classify.py  cleaning.py  cli.py  cli_help.py  constants.py  data.py  enumerables.py  feature_selection.py  hypertune.py  io.py  loading.py  nonsense.py  objectives.py  options.py  regressors.py  reporting.py  saving.py  scoring.py  timing.py
src/cli/: arguments.py  (+3 more)
test/: bash_test_embedding.sh  cc_bash_test_embedding.sh  cc_rebuild_test_cache.sh  cc_run_all_tests_no_rebuild.sh  datasets.py  manual_spreadsheet_test.sh  rebuild_test_cache.sh  run_all_tests_in_order.sh  run_all_tests_no_rebuild.sh  test_associate.py  test_cleaning.py  test_cli_parsing.py  test_cli_random.py  test_confusion_mat_scoring.py  test_datasets.py  test_embedding.py  test_inspection.py  test_loading.py  test_main.py  test_mlp.py  test_models.py  test_name_sanitize.py  test_predict.py  test_prepare.py  test_regression.sh  test_reports.py  test_saving.py  test_seeding.py  test_selection.py  test_splitting.py  test_spreadsheets.py  test_stepup_classify.sh  test_tokenization.py  test_tuning_score.py  test_univariate.py
web/: cli.html
(+241 files in other folders)
