[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"
ignore = ["E402"]
respect-gitignore = true

[tool.ruff.lint.isort]
known-first-party = ["src", "test"]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "local-folder",
  "first-party",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.poetry]
name = "df-analyze"
version = "0.1.0"
description = ""
authors = ["Derek M Berger <dmberger.dev@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<=3.10"
coverage = "^7.3.2"
featuretools = "^1.28.0"
joblib = "^1.3.2"
matplotlib = "^3.8.1"
numpy = "^1.24.4"
optuna = "^3.4.0"
pandas = "^2.1.2"
pytest = "^7.4.3"
scikit-learn = "^1.3.2"
scipy = "^1.11.3"
tabulate = "^0.9.0"
typing-extensions = "^4.8.0"
python-dateutil = "^2.8.2"
ucimlrepo = "^0.0.3"
lightgbm = "^4.1.0"
torch = [
  { version = "=2.1.1", source = "pypi", platform = "darwin" },
  { version = "=2.1.1+cpu", source = "pytorch", platform = "linux" },
  { version = "=2.1.1+cpu", source = "pytorch", platform = "win32" },
]
torchvision = [
  { version = "=0.16.1", source = "pypi", platform = "darwin" },
  { version = "=0.16.1+cpu", source = "pytorch", platform = "linux" },
  { version = "=0.16.1+cpu", source = "pytorch", platform = "win32" },
]
skorch = "^0.15.0"
openml = "^0.14.1"
jsonpickle = "^3.0.2"
pytest-xdist = { extras = ["psutil"], version = "^3.5.0" }


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu/"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"
cli-test-helpers = "^3.4.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["test"]
filterwarnings = [
  "ignore:PytestCollectionWarning",
  'ignore:DeprecationWarning',
  'ignore:Lazy Modules:UserWarning',
  'ignore:ConvergenceWarning',
  # note the use of single quote below to denote "raw" strings in TOML
  # 'ignore:function ham\(\) is deprecated:DeprecationWarning',
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "med: marks tests as medium (deselect with '-m \"not med\"')",
  "medium: marks tests as medium (deselect with '-m \"not medium\"')",
  "fast: marks tests as fast (deselect with '-m \"not fast\"')",
  "cached: marks tests as using cached results (deselect with '-m \"not cached\"')",
  "wip: marks tests not expected to pass (deselect with '-m \"not wip\"')",
]
